--- a/index.html
+++ b/index.html
@@ -70,8 +70,19 @@
 				</div>
 			</div>
 		</section>
+		
 
 	</main>
+	<div class="grid">
+		<div class="box">Ruby on Rails</div>
+		<div class="box">Java</div>
+		<div class="box">HTML</div>
+		<div class="box">Python</div>
+		<div class="box">Wordpress</div>
+		<div class="box">Bootstrap</div>
+		<div class="box">Java Web</div>
+		<div class="box">MySQL</div>
+	  </div>
 
 	<footer class="rodapePrincipal">
 		<div class="container">
@@ -115,6 +126,7 @@
 			</section>
 
 		</div>
+		
 
 		<section class="rodapePrincipal-patrocinadores">
 			<div class="container">
